fix plane geometry position in the blog section on iOS devices

--- a/django-website/wheelie/client/scss/layout/blog/_blog_header.scss
+++ b/django-website/wheelie/client/scss/layout/blog/_blog_header.scss
@@ -25,16 +25,16 @@
   position: relative;
   width: 100%;
 
-  @media #{$small-vh} {
-    height: 150px;
-  }
-
-  @media #{$medium}, #{$small} {
+  @media #{$large}, #{$medium}, #{$small} {
     height: 250px;
   }
 
   @media #{$smallest} {
     height: 200px;
+  }
+
+  @media #{$small-vh} {
+    height: 150px;
   }
 }
 
@@ -47,7 +47,7 @@
   }
 
   @media #{$large}, #{$medium}, #{$smallest} {
-    bottom: 0;
+    bottom: -200px;
   }
 
   @media #{$small} {
@@ -57,4 +57,14 @@
   @media #{$small-vh} {
     bottom: -75px;
   }
+}
+
+// Move the plane geometry higher on Ipad
+.blog-plane_geometry.js-tablet_up canvas {
+  bottom: 200px;
+}
+
+// Move the plane geometry higher on Iphone and Ipod
+.blog-plane_geometry.js-phone_up canvas {
+  bottom: 60px;
 }
